@@ -1,0 +1,31 @@
+bin_PROGRAMS=kiwix-install
+AM_CPPFLAGS=-I$(top_srcdir)/src/common -I$(top_srcdir)/src/zimlib/include -I$(top_srcdir)/src/pugixml
+kiwix_install_SOURCES= \
+	kiwix-install.cpp \
+	../common/kiwix/xapian/myhtmlparse.cc \
+	../common/kiwix/xapian/htmlparse.cc \
+	../common/kiwix/xapianIndexer.cpp \
+	../common/kiwix/cluceneIndexer.cpp \
+	../common/unaccent.cpp \
+	../common/base64.cpp \
+	../common/kiwix/indexer.cpp \
+	../common/kiwix/reader.cpp \
+	../common/kiwix/library.cpp \
+	../common/kiwix/manager.cpp \
+	../common/regexTools.cpp
+include_HEADERS= \
+	../common/kiwix/xapian/myhtmlparse.h \
+	../common/kiwix/xapian/namedentities.h \
+	../common/kiwix/xapian/htmlparse.h \
+	../common/kiwix/xapianIndexer.h \
+	../common/kiwix/cluceneIndexer.h \
+	../common/unaccent.h \
+	../common/base64.h \
+	../common/kiwix/indexer.h \
+	../common/kiwix/reader.h \
+	../common/kiwix/library.h \
+	../common/kiwix/manager.h \
+	../common/regexTools.h
+kiwix_install_CXXFLAGS=$(LIBXAPIAN_CFLAGS) $(LIBICU_CFLAGS) $(LIBPUGIXML_CFLAGS) -I../common/
+kiwix_install_LDFLAGS=$(LIBXAPIAN_LDFLAGS) $(LIBICU_LDFLAGS) $(LIBPUGIXML_LDFLAGS)
+kiwix_install_LDADD=../zimlib/src/libzim.la ../pugixml/libpugixml.la
